# A-maze-ing

./: .gitignore  Makefile  README.md  a_maze_ing.py  config.txt  output_maze.txt  pyproject.toml
.github/workflows/: ci_amazing.yml
mazegen/: __init__.py  errors.py  events.py  generator.py  maze.py  patterns.py
nuevo/: gen_animate_demo.py
scripts/: print_42_test.py  turtle_print_test_bfs.py
src/: __init__.py
src/app/: __init__.py  config_parser.py  mlx_wrapper.py  ui.py
src/mazegen/: __init__.py  events.py  generator.py  maze.py
src/scripts/: turtle_print_test_bfs.py
tests/: test_42_pattern.py  test_algorithms.py  test_animation_events.py  test_hex_export.py  test_no_open_3x3.py  test_nonperfect_cycles.py  test_reproducibility.py  test_solver.py  test_walls_consistency.py
