[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "0.1.0"
description = "Reusable maze generator for A-Maze-ing."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Mario and Anais"}
]
dependencies = []

[project.optional-dependencies]
dev = [
  "flake8>=7.0.0",
  "mypy>=1.8.0",
  "pytest>=8.0.0",
  "build>=1.0.0",
  "types-setuptools"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mazegen*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true
strict_optional = true
no_implicit_optional = true
show_error_codes = true
pretty = true
